UI:845626: TISQAUAT-701 Video spacing issue pdp fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -57869,6 +57869,9 @@ body.template-pages-account-accountOrderDetailPage .product-block.order-details 
 }
 
 /* Carousel Portion Starts */
+.Manufacturer.Temp07 .video-container{
+	padding-bottom:0px;
+}
 .Manufacturer.Temp07 .owl-item.cloned{
 	width: 423px;
 	float: left;
